Changed standard compile language to Java 13 Preview lesson 2 moving chat to maven + refactoring